@@ -178,6 +178,7 @@ GtkWidget *config_pplevel;
 
 GtkWidget *config_playlist_visible;
 GtkWidget *config_vertical_layout;
+GtkWidget *config_pause_on_click;
 GtkWidget *config_softvol;
 GtkWidget *config_forcecache;
 GtkWidget *config_verbose;
