@@ -1,4 +1,5 @@
 Development
+    Set 'pause on mouse click' to be an Advanced Preference
     When embedded draw the black background on load
     Add Preference to plugin option to disable embedding, some people find it useful
     Make icon look better in avant-window-navigator
